fix overflowing pixel around card edges

--- a/src/app/modules/shared/card/components/card/card.component.scss
+++ b/src/app/modules/shared/card/components/card/card.component.scss
@@ -2,4 +2,5 @@
 	background: var(--color-bg);
 	display: block;
 	overflow: hidden;
+	border-radius: var(--border-radius);
 }
